platform/templates/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: platform-service
  namespace: platform
spec:
  selector:
    app: platform-was
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
---
