platform/templates/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: platform
  annotation:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-jmjang
spec:
  tls:
    - hosts:
        - platform.jmjang.net
      secretName: platform-tls-secret
  rules:
  - host: platform.jmjang.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: platform-service
            port:
              number: 8080
---
